infra/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-api
  namespace: sandbox
  labels:
    app: sandbox-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sandbox-api
  template:
    metadata:
      labels:
        app: sandbox-api
    spec:
      serviceAccountName: notebook-manager-sa 
      imagePullSecrets:
      - name: tgdex-registry-cred
      containers:
      - name: sandbox-api
        image: ghcr.io/datakaveri/tgdex-sandbox-connect-api:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "1"
            memory: "2Gi"
          requests:
            cpu: "500m"
            memory: "1Gi"
