infra/api/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-api
  namespace: sandbox
  labels:
    app: sandbox-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sandbox-api
  template:
    metadata:
      labels:
        app: sandbox-api
    spec:
      serviceAccountName: notebook-manager-sa 
      imagePullSecrets:
      - name: tgdex-registry-cred
      containers:
      - name: sandbox-api
        image: ghcr.io/datakaveri/tgdex-sandbox-connect-api:tgdex-1.0.0
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /v1/health
            port: 3000
          initialDelaySeconds: 5 
          periodSeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /v1/health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 30
        resources:
          limits:
            cpu: "1"
            memory: "2Gi"
          requests:
            cpu: "500m"
            memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: sandbox-api
  namespace: sandbox
  labels:
    app: sandbox-api
spec:
  selector:
    app: sandbox-api
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  type: ClusterIP
