infra/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandbox-api-ingress
  namespace: sandbox
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-modsecurity: "false"
    nginx.ingress.kubernetes.io/server-snippet: add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self'; frame-ancestors 'none'; form-action 'self';" always;
spec:
  tls:
  - hosts:
    - api.sandbox.tgdex.telangana.gov.in
    secretName: sandbox-api-tls
  rules:
  - host: api.sandbox.tgdex.telangana.gov.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sandbox-api
            port:
              number: 80
